[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pydocs-mcp-eval"
version = "0.1.0"
description = "Benchmark suite for pydocs-mcp (RepoQA-SNF + MLflow)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "rapidfuzz>=3.0",
    # The optimize layer's run config (OptimizeRunConfig) is a pydantic model
    # loaded from YAML (spec §D7); pyyaml parses the shipped configs + the
    # skillopt env-plugin. Both are transitively present via pydocs-mcp but the
    # optimize layer depends on them directly, so declare them here.
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Plotting: pulled in here (not under an extra) so `plot_baselines`
    # works straight from `uv pip install -e benchmarks`. seaborn brings
    # matplotlib transitively, but pinning matplotlib explicitly keeps
    # the lower bound visible.
    "matplotlib>=3.7",
    "seaborn>=0.13",
]
# Extras are split BY COUPLING, not by feature. The base install
# (dependencies above) serves the black-box agent-efficiency track, which
# needs only the pydocs-mcp CLI on PATH — NOT the pydocs_mcp Python library.
# The library-coupled parts (in-process retrieval systems, the optimize
# overlay server, the tool_docs / usage_skill artifacts) import pydocs_mcp
# directly and are gated behind the [retrieval] extra below. Import guards at
# those boundaries (pydocs_eval._retrieval_extra) turn a missing-extra
# ModuleNotFoundError into an actionable install hint.
[project.optional-dependencies]
# The indexed-retrieval library. Declared as a published PyPI dependency
# (pydocs-mcp is live on PyPI); pin the floor at 0.5.1 — the first version
# exporting the tool_docs contract constants (CHARS_PER_TOKEN,
# PER_TOOL_TOKEN_BUDGET, REQUIRED_MARKERS, TOTAL_TOKEN_BUDGET) that the
# tool_docs / usage_skill artifacts consume (they landed after the v0.5.0 tag).
retrieval = ["pydocs-mcp>=0.5.1"]
mlflow = ["mlflow>=2.0"]
# NOTE: there is deliberately NO extra for the skillopt optimizer adapter.
# It needs microsoft/SkillOpt installed from source at a pinned commit (the
# released PyPI wheel lacks the `skillopt.train` CLI the adapter drives), and
# PyPI rejects uploads whose metadata carries direct-URL requirements
# ("Can't have direct dependency"). The SHA-pinned install command lives in
# `pydocs_eval.optimize.optimizers.skillopt._SKILLOPT_PIN` — the adapter's
# `ensure_available()` error prints it, and the _CONSUMED_SKILLOPT_SURFACE
# canary gates any SHA bump.
# The union of every extra — one install target for a full-featured dev/CI env.
all = [
    "pydocs-mcp>=0.5.1",
    "mlflow>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pydocs_eval*"]

# The usage_skill seed + the shipped run-config YAMLs ship as package data so
# importlib.resources.files() resolves them in a built install, not just from
# the PYTHONPATH source tree.
[tool.setuptools.package-data]
"pydocs_eval.optimize.artifacts" = ["*.md"]
"pydocs_eval.optimize.configs" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
