[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pydocs-mcp-eval"
version = "0.2.0"
description = "Benchmark suite for pydocs-mcp (RepoQA-SNF + MLflow)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "rapidfuzz>=3.0",
    # Gold-patch parsing (trajectory/gold_diff.py). unidiff is the same
    # PatchSet library the swebench harness uses for patch→files extraction;
    # it survives every measured gold-diff edge case (unquoted space paths,
    # hunkless renames, the binary one-liner, the symlink) without naive
    # header splitting. MIT-licensed, zero transitive deps.
    "unidiff>=0.7,<1.0",
    # The optimize layer's run config (OptimizeRunConfig) is a pydantic model
    # loaded from YAML (spec §D7); pyyaml parses the shipped configs + the
    # skillopt env-plugin. Both are transitively present via pydocs-mcp but the
    # optimize layer depends on them directly, so declare them here.
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Plotting: pulled in here (not under an extra) so `plot_baselines`
    # works straight from `uv pip install -e benchmarks`. seaborn brings
    # matplotlib transitively, but pinning matplotlib explicitly keeps
    # the lower bound visible.
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

# ADDITIVE console commands — every documented `python -m pydocs_eval.…`
# invocation keeps working; these are ergonomic aliases for an installed
# environment (no PYTHONPATH juggling). One command per module entry point.
[project.scripts]
pydocs-eval = "pydocs_eval.runner:main"
pydocs-eval-optimize = "pydocs_eval.optimize.__main__:main"
pydocs-eval-agent-track = "pydocs_eval.agent_track.__main__:main"
pydocs-eval-ci-compare = "pydocs_eval.reporting.ci_compare:main"
pydocs-eval-plot = "pydocs_eval.reporting.plotting:main"
pydocs-eval-bench-cache = "pydocs_eval.bench_cache_cli:main"
pydocs-eval-compute-metrics = "pydocs_eval.trajectory.compute_metrics_cli:main"
# Extras are split BY COUPLING, not by feature. The base install
# (dependencies above) serves the black-box agent-efficiency track, which
# needs only the pydocs-mcp CLI on PATH — NOT the pydocs_mcp Python library.
# The library-coupled parts (in-process retrieval systems, the optimize
# overlay server, the tool_docs / usage_skill artifacts) import pydocs_mcp
# directly and are gated behind the [retrieval] extra below. Import guards at
# those boundaries (pydocs_eval._retrieval_extra) turn a missing-extra
# ModuleNotFoundError into an actionable install hint.
[project.optional-dependencies]
# The indexed-retrieval library. Declared as a published PyPI dependency
# (pydocs-mcp is live on PyPI); pin the floor at 0.5.1 — the first version
# exporting the tool_docs contract constants (CHARS_PER_TOKEN,
# PER_TOOL_TOKEN_BUDGET, REQUIRED_MARKERS, TOTAL_TOKEN_BUDGET) that the
# tool_docs / usage_skill artifacts consume (they landed after the v0.5.0 tag).
retrieval = ["pydocs-mcp>=0.5.1"]
mlflow = ["mlflow>=2.0"]
# The skillopt optimizer adapter drives the released PyPI `skillopt` 0.2.x,
# which ships everything the adapter consumes (the `scripts.train` entry, the
# EnvAdapter ABC, `best_skill.md`). WHY a PyPI version range and not a git SHA:
# the deployment environment is air-gapped behind a PyPI mirror — direct git
# URLs are unreachable there, and PyPI rejects metadata carrying direct-URL
# requirements anyway ("Can't have direct dependency"). This range IS the pin;
# bumping it is a deliberate edit gated by the adapter's
# _CONSUMED_SKILLOPT_SURFACE constant and its canary test
# (benchmarks/tests/optimize/test_skillopt_adapter.py).
optimizers-skillopt = ["skillopt>=0.2,<0.3"]
# Drives the product ask agent in-process (LangGraphAskRunner + the
# architecture bridges in optimize/ask_binding.py). Floor = the first product
# release shipping the build_agent(prompts=...) seam — the same version-floor
# rationale as [retrieval]; pin the real number when that release publishes.
# PUBLISH GATE: 0.5.2 does not exist yet — do NOT publish pydocs-mcp-eval
# 0.2.0 to PyPI before the product release shipping the seam, or
# pip install "pydocs-mcp-eval[ask]" resolves nothing.
ask = ["pydocs-mcp[ask-your-docs]>=0.5.2"]
# The union of every extra — one install target for a full-featured dev/CI env.
# WHY [ask] is excluded: its floor names the FIRST product release shipping
# the build_agent(prompts=...) seam, which is unpublished — including it here
# would make `pip install .[all]` unresolvable today (it broke the CI
# benchmark job). Re-add it when that release exists; until then [ask] is an
# explicit opt-in on top of a source checkout.
all = [
    "pydocs-mcp>=0.5.1",
    "mlflow>=2.0",
    "skillopt>=0.2,<0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pydocs_eval*"]

# The usage_skill seed + the shipped run-config YAMLs ship as package data so
# importlib.resources.files() resolves them in a built install, not just from
# the PYTHONPATH source tree.
[tool.setuptools.package-data]
"pydocs_eval.optimize.artifacts" = ["*.md"]
"pydocs_eval.optimize.configs" = ["*.yaml"]
"pydocs_eval.trajectory.configs" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
