# Pinned DS-1000 reference dependencies.
#
# WHY these exact versions: they are lifted verbatim from the DS-1000
# `ds1000-py310` environment.yml so that the documentation indexer reads
# the precise library versions DS-1000 was authored against. Version
# parity is the point — DS-1000 problems target specific APIs, and
# indexing a newer/older release would surface signatures the benchmark
# never expected. The conda specs are already translated to pip names
# (`pytorch==2.2.0` -> `torch==2.2.0`; `tensorflow-cpu` keeps its pip
# name). Do NOT bump these pins without re-baselining the benchmark.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ds1000-reference"
version = "0.0.0"
description = "Pinned DS-1000 reference dependencies for the pydocs-mcp retrieval benchmark."
requires-python = ">=3.10"
dependencies = [
    "gensim==4.3.2",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==1.5.3",
    "torch==2.2.0",
    "seaborn==0.13.2",
    "scikit-learn==1.4.0",
    "scipy==1.12.0",
    "statsmodels==0.14.1",
    "xgboost==2.0.3",
    "tensorflow-cpu==2.16.1",
]

[tool.setuptools.packages.find]
where = ["src"]
